--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
@@ -21,3 +20,25 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.hprof
+
+#idea
+out/
+build/
+.idea
+.gradle
+
+#private-key
+*-credentials.gradle
+
+# doc file
+*.pdf
+*.docx
+
+gradle.properties
+
+#draft dir
+draft/*
+
+#ignore change log
+changelog.md
