chore(fragrans): 修改包名称，适配aop等组件的改动

--- a/settings.gradle
+++ b/settings.gradle
@@ -63,18 +63,18 @@ String[] subprojectNames = [
         'sdk:spring-framework-enhancement:validation:enhance-validation',
         'sdk:spring-framework-enhancement:aop:enhance-aop',
         'sdk:generic-toolkits',
-//        'sdk:data:common:data-common-codes',
-//        'sdk:data:common:traits:data-traits-generic',
-//        'sdk:data:common:traits:cyber-world:data-traits-account',
-//        'sdk:data:common:traits:cyber-world:data-traits-application',
-//        'sdk:data:common:traits:cyber-world:data-traits-data-structure',
-//        'sdk:data:common:traits:cyber-world:data-traits-network',
-//        'sdk:data:common:traits:cyber-world:data-traits-security',
-//        'sdk:data:common:traits:real-world:data-traits-mankind',
-//        'sdk:data:common:traits:real-world:data-traits-society',
-//        'sdk:data:common:traits:real-world:data-traits-bio',
-//        'sdk:data:common:traits:data-traits-starter',
-//        'sdk:data:data-schema',
+        'sdk:data:common:data-common-codes',
+        'sdk:data:common:traits:data-traits-generic',
+        'sdk:data:common:traits:cyber-world:data-traits-account',
+        'sdk:data:common:traits:cyber-world:data-traits-application',
+        'sdk:data:common:traits:cyber-world:data-traits-data-structure',
+        'sdk:data:common:traits:cyber-world:data-traits-network',
+        'sdk:data:common:traits:cyber-world:data-traits-security',
+        'sdk:data:common:traits:real-world:data-traits-mankind',
+        'sdk:data:common:traits:real-world:data-traits-society',
+        'sdk:data:common:traits:real-world:data-traits-bio',
+        'sdk:data:common:traits:data-traits-starter',
+        'sdk:data:data-schema',
 //        'sdk:data:data-persistence',
 //        'sdk:data:data-cache-core',
 //        'sdk:data:data-cache-spring-redis',
