chore(fragrans): 完成schema的适配

--- a/settings.gradle
+++ b/settings.gradle
@@ -76,8 +76,8 @@ String[] subprojectNames = [
         'sdk:data:common:traits:data-traits-starter',
         'sdk:data:data-schema',
 //        'sdk:data:data-persistence',
-//        'sdk:data:data-cache-core',
-//        'sdk:data:data-cache-spring-redis',
+        'sdk:data:data-cache-core',
+        'sdk:data:data-cache-spring-redis',
 //        'sdk:data:data-unique-id',
 //        'sdk:data:common:data-domain-common-practice',
 //        'sdk:event-driven:event-standard:event-standard-schema',
