--- a/sdk/data/data-persistence/build.gradle
+++ b/sdk/data/data-persistence/build.gradle
@@ -12,4 +12,5 @@ dependencies {
     api "org.mybatis.spring.boot:mybatis-spring-boot-starter"
     api "org.springframework.boot:spring-boot-starter-data-jdbc"
     testImplementation "mysql:mysql-connector-java"
+    testImplementation "com.microsoft.sqlserver:mssql-jdbc"
 }
