chore(fragrans): 差最后api目录迁移完

--- a/settings.gradle
+++ b/settings.gradle
@@ -78,9 +78,9 @@ String[] subprojectNames = [
         'sdk:data:data-persistence',
         'sdk:data:data-cache-core',
         'sdk:data:data-cache-spring-redis',
-//        'sdk:data:data-unique-id',
-//        'sdk:data:common:data-domain-common-practice',
-//        'sdk:event-driven:event-standard:event-standard-schema',
+        'sdk:data:data-unique-id',
+        'sdk:data:common:data-domain-common-practice',
+        'sdk:event-driven:event-standard:event-standard-schema',
 //        'sdk:api:api-standard:api-standard-data',
 //        'sdk:api:api-standard:api-standard-error-reveal-config',
 //        'sdk:api:api-standard:api-standard-error-exceptions',
