feat(log): 增加LogMessageCustomizer用于处理记录日之前的模板和内容

--- a/settings.gradle
+++ b/settings.gradle
@@ -85,12 +85,11 @@ String[] subprojectNames = [
         'sdk:api:api-standard:api-standard-error-reveal-config',
         'sdk:api:api-standard:api-standard-error-exceptions',
         'sdk:api:api-standard:api-standard-error',
-//        'sdk:audit:common:audit-data-schema',
-//        'sdk:audit:audit-cotroller-engine',
         'sdk:api:api-advice:api-advice-engine',
         'sdk:api:api-enhance-validation',
         'sdk:api:api-security:api-security-core',
-//        'sdk:api:api-security:api-security-operator-auto-logging',
+        'sdk:api:api-security:api-security-operator-aware',
+        'sdk:api:api-security:api-security-automation-logging',
         'sdk:api:api-group:api-group-core',
         'sdk:api:api-group:api-group-context-path',
         'sdk:api:api-options:api-options-common',
