chore(fragrans): 修正发布脚本的地址

--- a/build-scripts/gradle/repositories/declare-dependency-repository-urls.gradle
+++ b/build-scripts/gradle/repositories/declare-dependency-repository-urls.gradle
@@ -1,5 +1,5 @@
 //包仓库声明
 ext {
-    snapshots = "https://oss.sonatype.org/content/repositories/snapshots" as String
+    snapshots = "https://s01.oss.sonatype.org/content/repositories/snapshots" as String
     releases = "http://maven.aliyun.com/nexus/content/groups/public/" as String
 }
