--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,7 @@ allprojects {
     apply plugin: 'io.spring.dependency-management' //spring的依赖管理插件
     apply plugin: 'maven-publish' //maven发布插件
     apply plugin: 'org.sonarqube' //sonar的扫描插件
+    apply plugin: 'signing' //签名组件
     /**
      * 声明jdk兼容版本
      */
@@ -157,6 +158,26 @@ allprojects {
         from sourceSets.main.allJava //从每个工程的main目录中拷贝所有java代码
         archiveClassifier = "sources" //为打出来的包增加一个源代码的分类符号
     }
+
+    task javadocJar(type: Jar) {
+        from javadoc
+        archiveClassifier = "javadoc"
+    }
+    /**
+     * 在编译打包的基础上，
+     * 执行源代码打包任务
+     */
+    artifacts {
+        archives javadocJar, sourceJar
+    }
+
+    /**
+     * 签名构件
+     */
+    signing {
+        sign configurations.archives
+    }
+
     /**
      * 配置发布任务
      */
@@ -193,11 +214,6 @@ allprojects {
                     }
                 }
                 /**
-                 * 在编译打包的基础上，
-                 * 执行源代码打包任务
-                 */
-                artifact sourceJar
-                /**
                  * java插件会声明一个组件类型叫java
                  */
                 from components.java
@@ -232,6 +248,8 @@ allprojects {
     /*令javadoc支持中文*/
     tasks.withType(Javadoc) {
         options.encoding = "UTF-8"
+        options.charSet = "UTF-8"
+        options.addStringOption("Xdoclint:none", "-quiet")
     }
     /**
      * 启用junit5测试，
@@ -298,6 +316,7 @@ for (String subprojectName : gradle.ext.subprojectNames) {
     }
     String projectShortName = project(subprojectName).name
     tasks.getByPath(subprojectName + ":generatePomFileFor" + projectShortName.substring(0, 1).toUpperCase() + projectShortName.substring(1) + "Publication").dependsOn(
+            tasks.getByPath(subprojectName + ":javadoc"),
             tasks.getByPath(subprojectName + ":test")
     )
     previousProjectName = subprojectName
