--- a/sdk/api/api-enhance-validation/build.gradle
+++ b/sdk/api/api-enhance-validation/build.gradle
@@ -3,4 +3,5 @@ dependencies {
     api group: "${group}", name: 'api-standard-error-exceptions'
     api group: "${group}", name: 'api-advice-engine'
     testImplementation "org.springframework.boot:spring-boot-starter-web"
+    testImplementation "${group}:api-standard-error"
 }
