chore(log): refactor(log): 修改log-engine为log-core
BREAKING CHANGE: BasicLogger不再是一个bean

--- a/settings.gradle
+++ b/settings.gradle
@@ -64,8 +64,8 @@ String[] subprojectNames = [
         'sdk:sugar:trait:sugar-trait-apt',
         'sdk:sugar:trait:sugar-trait-apt-test',
         'sdk:sugar:trait:sugar-trait-utils',
-        'sdk:log:log-engine-schema',
-        'sdk:log:log-engine',
+        'sdk:log:core:log-core-schema',
+        'sdk:log:core:log-core',
         'sdk:log:log-generic-schema',
         'sdk:log:log-generic',
         'sdk:log:log-common-words',
