feat(log-generic): 增加不需要异常的日志记录方法
BREAKING CHANGE: GenericLoggerStaticAccessor命名为GenericLoggers

--- a/settings.gradle
+++ b/settings.gradle
@@ -66,8 +66,8 @@ String[] subprojectNames = [
         'sdk:sugar:trait:sugar-trait-utils',
         'sdk:log:core:log-core-schema',
         'sdk:log:core:log-core',
-        'sdk:log:log-generic-schema',
-        'sdk:log:log-generic',
+        'sdk:log:generic:log-generic-schema',
+        'sdk:log:generic:log-generic',
         'sdk:log:log-common-words',
         'sdk:design-pattern:criteria-pattern',
         'sdk:spring-framework-enhancement:infrastructure:enhance-infrastructure',
