--- a/settings.gradle
+++ b/settings.gradle
@@ -89,7 +89,7 @@ String[] subprojectNames = [
         'sdk:data:data-persistence',
         'sdk:data:data-cache-core',
         'sdk:data:data-cache-spring-redis',
-        'sdk:data:data-unique-id',
+        //'sdk:data:data-unique-id', --待废弃
         'sdk:data:common:data-domain-common-practice',
         'sdk:event-driven:event-standard:event-standard-schema',
         'sdk:api:api-standard:api-standard-data',
