--- a/build.gradle
+++ b/build.gradle
@@ -271,6 +271,7 @@ allprojects {
 
     /*令javadoc支持中文*/
     tasks.withType(Javadoc) {
+        failOnError false
         options.encoding = "UTF-8"
         options.charSet = "UTF-8"
         options.addStringOption("Xdoclint:none", "-quiet")
