--- a/sdk/api/api-options/api-options-engine/src/test/resources/application.yaml
+++ b/sdk/api/api-options/api-options-engine/src/test/resources/application.yaml
@@ -3,6 +3,6 @@ logging:
     root: debug
 spring:
   datasource:
-    url: jdbc:mysql://mysql-internet-cn-north-1-335cadf679754c58.rds.jdcloud.com/fragrans?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost/fragrans?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: fragrans
     password: 1qAz2WSX2020
